tests/mm0_mmu/fail/bad-sort213.mm0
-- bad modifier order
strict pure provable sort s213;